Switch trial
(cherry picked from commit e7c02f38791ac230e1aeb49d46f0c2551f737f46)